# fdsa

./: .gitignore  AUTHORIZATION.md  HYBRID_SEARCH_IMPLEMENTATION.md  MIGRATION_SUMMARY.md  docker-compose.yaml  docker.compose.yaml  fluent-bit.conf  jaeger-config.yaml  pom.xml
.github/: copilot-instructions.md
.github/workflows/: run-tests.yaml
frontend/: .cta.json  .gitignore  codegen.ts  index.html  package.json  pnpm-lock.yaml  schema.graphql  schema.graphqls  schema.json  tsconfig.json  vite.config.ts
frontend/openapi-generator-template/: apiInner.mustache
frontend/src/: routeTree.gen.ts  router.tsx
migrations/: 001_github_style_identifiers.sql
pipeline/: .env.example  README.md  TEST_INTEGRATION.md  consumer.py  justfile  pyproject.toml  run_integration_tests.fish  test_integration.py  try_workflow.py  worker.py
pipeline/activities/: embed_text.py  index_opensearch.py  repository_actions.py  summarize_code.py
pipeline/config/: kafka.py  opensearch.py
pipeline/consumers/: ingest.py
pipeline/ml/: llm.py
pipeline/tests/integration/: test_integration.py
pipeline/workflows/: repository_ingestion.py  snippet_ingestion.py
ts/: .env.example  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
ts/frontend/: package.json  pnpm-lock.yaml
ts/workers/: .gitignore  README.md
workflow/: consumer.py  main.py  worker.py
workflow/activities/: __init__.py  chunk_code.py  index_opensearch.py  summarize_chunks.py
workflow/config/: kafka.py  temporal.py
workflow/ml/: embeder.py
workflow/workflows/: __init__.py  snippet_ingestion.py
(+218 files in other folders)
