[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kafka-python>=2.3.0",
    "langchain>=1.1.3",
    "langchain-openai>=1.1.1",
    "opensearch-py>=3.1.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.31.0",
    "semchunk>=3.2.5",
    "temporalio>=1.20.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "testcontainers[opensearch]>=4.13.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]